JPEG-XL: fix export of multi-layer animations

BUG: 455361
(cherry picked from commit 6ec76fd7917f1160dbb7301404f0cf5812fe9092)